# investment-bot

./: .env.example  .gitignore  README.md  data_dump_20260403_133755.json  data_dump_20260403_135508.json  data_dump_20260403_135545.json  data_fetcher.py  expert_analyst.py  investment-bot.service  main.py  pyproject.toml
reports/: 2026-04-04-美股技術分析報告.md  2026-04-10-tech-analysis.md  report_2026-04-13.md
